Update terms with Fit Guarantee

--- a/app/views/statics/_returns.html.slim
+++ b/app/views/statics/_returns.html.slim
@@ -3,6 +3,8 @@ ol
 
   li  We only accept returns or exchanges up to 30 days from the original date of shipment.
 
+  li  We accept returns or exchanges on single item purchases that do not fit for up to 90 days from the original date of shipment or provide a voucher exchangeable up to the value of $50 towards alterations. 
+
   li  Any item to be returned or exchanged must be in new, unused and resalable condition, with the DO NOT REMOVE tag still attached in the same place as originally sent. We photograph every product as part of our QA process so we know where the DO NOT REMOVE tag was attached.
 
   li  Any exchange or return should be sent back in the original, undamaged packaging, plus any accessories or extras that may have been included with the shipment.
