--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -45,6 +45,8 @@
 
         li If your purchase includes more than 1 style in the same size, we can only offer a full refund for 1 style; if you would like to return more from this order, we can offer an exchange or credit if you meet all other returns criteria.
 
+        li If your single item purchase does not fit as expected, we will accept a return or exchange at any time up to 90 days from the original date of shipment or provide you with a voucher exchangeable up to the value of $50 towards alterations with our alterations partner.
+
       p To make a return or exchange, please follow these steps:
 
       = render 'returns'
