Make buttons configurable

--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -219,14 +219,22 @@
     }, {
       label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
       defaultValue: decodedDefaultParam('s')
-    }, {
+    },
+    {
+      label: "submit text", param: "st", required: false, encoded: true, type: 'string'
+    },
+    {
+      label: "fb text", param: "fbt", required: false, encoded: true, type: 'string'
+    },
+    {
       label: "facebook pixel id", param: "fb", required: false, encoded: true,  type: 'string',
       defaultValue: decodedDefaultParam('fb')
     },
     {
       label: "pop",        param: "pop", required: true,  encoded: false, type: 'boolean',
       defaultValue: 'true'
-    }, {
+    },
+    {
       label: "raw",        param: "raw", required: false, encoded: false, type: 'boolean'
     },
     {
