--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -18,6 +18,8 @@
     message       = decode(params[:m])
     content       = decode(params[:c]) || promocode
     class_name    = decode(params[:s]) || class_name
+    submit_text   = decode(params[:st])
+    fb_text       = decode(params[:fbt])
     fb_id         = decode(params[:fb])
     timeout       = params[:t] || 3
     timer         = decode(params[:ti])
@@ -32,18 +34,20 @@
 
     email_capture_modal = "
       var modal_popup = new window.page.EmailCaptureModal({
-        promocode: \"#{promocode}\",
-        content:   \"#{content}\",
-        heading:   \"#{heading}\",
-        message:   \"#{message}\",
-        className: \"#{class_name}\",
-        fb:        \"#{fb_id}\",
-        action:    \"#{campaigns_email_capture_path}\",
-        container: \"#modal-popup-content-template\",
+        promocode:  \"#{promocode}\",
+        content:    \"#{content}\",
+        heading:    \"#{heading}\",
+        message:    \"#{message}\",
+        className:  \"#{class_name}\",
+        submitText: \"#{submit_text}\",
+        fbText:     \"#{fb_text}\",
+        fb:         \"#{fb_id}\",
+        action:     \"#{campaigns_email_capture_path}\",
+        container:  \"#modal-popup-content-template\",
         timeout:    #{auto_apply ? 100000 : timeout},
         timer:      #{timer.present? ? timer : 0},
         force:      true,
-        uuid:      \"#{campaign_uuid}\"
+        uuid:       \"#{campaign_uuid}\"
       });
     "
     email_capture_modal += "modal_popup.enableAutoApplyPromoCampaign();" if auto_apply
@@ -75,16 +79,16 @@
         .row.row-inline.text-center
           .col-sm-5.col-inline.full-form
             - if promocode == 'birthdaybabe'
-              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode), redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode), redeem_via_fb_state: 'clicked'), id: 'email-capture-fb-button', class: 'btn btn-facebook btn-block btn-md'
             - else
-              = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+              = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), id: 'email-capture-fb-button', class: 'btn btn-facebook btn-block btn-md'
           .col-sm-2.col-inline.full-form
             .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
           .col-sm-5.col-inline
             .input-group
               input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
               span.input-group-addon
-                input.btn-plain.btn-reset type="submit" value="Send"
+                input.btn-plain.btn-reset#email-capture-submit-button type="submit" value="Send"
 
   - elsif template_name == 'new-modal'
     #modal-popup-content-template
@@ -96,9 +100,9 @@
             .input-group
               input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="EMAIL"
               span.input-group-addon
-                input.btn-plain.btn-reset type="submit" value="SUBMIT"
+                input.btn-plain.btn-reset#email-capture-submit-button type="submit" value="Send"
           .col-sm-12.col-inline.full-form.fb-form
-            = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+            = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), id: 'email-capture-fb-button', class: 'btn btn-facebook btn-block btn-md'
 
   - else # default, support legacy
     #modal-popup-content-template.hidden
@@ -109,5 +113,5 @@
           .col-md-8.col-md-offset-2.text-center.wrap-email
             input.form-control.standard-form type="email" name="email" placeholder='email address'
           .col-xs-12.text-center.wrap-button
-            button.btn-plain.btn.submit type="submit" value="submit"
+            button.btn-plain.btn.submit#email-capture-submit-button type="submit" value="submit"
               | Submit
