--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -283,7 +283,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item
-            a.text href='http://blog.fameandpartners.com' BLOG
+            a.text href='http://blog.fameandpartners.com' target='_blank' BLOG
           - if sale_active?
             li.normal-item
               = link_to 'SALE', mystyle_landing_page_path(lpi: 'none', sale: 'all', limit: 99), class: 'text'
