--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -25,13 +25,13 @@
         h2 {
           background-color: transparent;
           color:            #000;
-          font-family:      "OldStandardTT-Italic" !important;
           font-size:        3rem;
-          font-weight:      200;
           line-height:      4.8rem;
           max-width:        28em;
-          font-style: italic;
           text-transform: none;
+          font-family: "old-standard",serif !important;
+          font-style: italic;
+          font-weight: 400;
         }
         p {
           color:       black;
