--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -64,6 +64,10 @@
         .fb-form{
           margin-top: 30px;
           margin-bottom: 15px;
+          .btn-facebook{
+            padding-left:55px;
+            padding-right: 10px;
+          }
         }
 
       }
