fix error merge

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -100,7 +100,7 @@
               span.input-group-addon
                 input.btn-plain.btn-reset type="submit" value=submit_text
           .col-sm-12.col-inline.full-form.fb-form
-            = link_to 'Sign up via Facebook', fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
+            = link_to fb_text, fb_auth_path(auto_apply: true, redeem_via_fb_state: 'clicked'), class: 'btn btn-facebook btn-block btn-md'
 
   - else # default, support legacy
     #modal-popup-content-template.hidden
