single col for mb

--- a/app/assets/transient_content/2015-new-modal-thank-you/stylesheets/2015_new_modal_thank_you.css.scss
+++ b/app/assets/transient_content/2015-new-modal-thank-you/stylesheets/2015_new_modal_thank_you.css.scss
@@ -46,6 +46,9 @@
         .six-icons{
           margin-top:5rem;
           height: 180px;
+          @media(max-width: 992px){
+              height: 360px;
+          }
           .popup-icon{
             font-size: 1rem;
             font-weight: 700;
@@ -60,7 +63,7 @@
             display: table;
             cursor: pointer;
             @media(max-width: 992px){
-              width: 44%;
+              width: 92%;
             }
           }
           .container{
