--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -3,7 +3,7 @@
     background-color:      $c-neutral-white;
     background-position-y: 0;
     background-repeat:     no-repeat;
-    border:                1px solid #d7d7d7;
+    border:                1px solid #d7d7d7 !important;
     min-height:            407px;
     text-transform:        uppercase;
     width: 650px;
