--- a/app/assets/transient_content/2015-new-modal-thank-you/stylesheets/2015_new_modal_thank_you.css.scss
+++ b/app/assets/transient_content/2015-new-modal-thank-you/stylesheets/2015_new_modal_thank_you.css.scss
@@ -34,9 +34,10 @@
           color:       black;
           font-family: $font-family-secondary;
           font-size:   1.5rem;
-          font-weight: 600;
+          font-weight: 500;
           line-height: 2rem;
           text-align:  center;
+          text-transform: uppercase;
         }
 
       }
@@ -50,6 +51,11 @@
           height: 180px;
           @media(max-width: 992px){
               height: 360px;
+          }
+          .black-bg{
+            background-color: black;
+            color: white;
+            font-size: 2rem !important;
           }
           .popup-icon{
             font-size: 1rem;
@@ -79,6 +85,7 @@
             height: 35px;
             background-size: contain;
             float: left;
+            margin-left: 5px;
           }
           .icon-design{
             background-image: url('modals/thanks/design.png');
