remove black thank you and fix shopnow btn

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -136,7 +136,7 @@
             .container
               .icon.icon-colours
               | CUSTOM COLOURS
-          .popup-icon.black-bg
+          .popup-icon.black-bg onclick="$('.new-modal-thank-you .vex-dialog-button-secondary').click()"
             .container
               | SHOP NOW
 
