instagram carousel, added modernizr to project

--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -15,6 +15,7 @@ $c-neutral-5: #e4e4e4;
 $c-neutral-6: #bcbcbc;
 $c-neutral-10: #666;
 $c-neutral-12: #333;
+$c-neutral-13: #222;
 $c-neutral-black: #000;
 
 $slides-bg: #ececf4;
