--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -3,6 +3,8 @@ meta name="description" content=(get_meta_description)
 meta charset="utf-8"
 meta name="viewport" content="width=device-width"
 
+script type="text/javascript" src="/assets/modernizr-custom.js"
+
 = render 'fame_favicon/links'
 
 link rel="canonical" href=get_canonical_href
