--- a/app/assets/stylesheets/redesign/components/_carousel-strap.scss
+++ b/app/assets/stylesheets/redesign/components/_carousel-strap.scss
@@ -87,11 +87,115 @@
   }
 
   .slick-prev {
-    left: 10px;
+    left: 2px;
   }
 
   .slick-next {
-    right: 10px;
+    right: 2px;
+  }
+
+  // variations
+  &.instagram {
+    text-align: center;
+
+    .outer-wrap {
+      border-bottom: solid $c-neutral-black 1px;
+    }
+
+    .title:before {
+      background: $c-neutral-black;
+    }
+
+    .media-wrap {
+      margin-bottom: 15px;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      color: $c-neutral-white;
+      background: rgba($c-neutral-13, 0.9);
+      opacity: 0;
+      @include transition(opacity 0.4s linear);
+
+      .overlay-outer-wrap {
+        display: table;
+        width: 100%;
+        height: 100%;
+      }
+
+      .overlay-inner-wrap {
+        position: relative;
+        display: table-cell;
+        vertical-align: middle;
+      }
+
+      .touchevents & {
+        opacity: 1;
+        background: transparent;
+
+        .overlay-inner-wrap {
+          width: 100%;
+          height: 100%;
+        }
+
+        .icon {
+          position: absolute;
+          top: 4px;
+          right: 5px;
+          font-size: 24px;
+          color: $c-neutral-black;
+        }
+
+        .CTA {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          margin: 0;
+          background: rgba($c-neutral-13, 0.9);
+          border: none;
+        }
+
+      }
+
+    }
+
+    .icon {
+      font-size: 32px;
+    }
+
+    .CTA {
+      display: block;
+      margin: 6px 15px 0 15px;
+      padding: 6px 10px;
+      line-height: normal;
+      text-transform: uppercase;
+      font-size: 0.75em;
+      font-weight: 600;
+      border: solid $c-neutral-white 1px;
+    }
+
+    .user {
+      color: $c-neutral-black;
+    }
+
+    .item-wrap {
+      padding: 0 5px;
+
+      &:hover {
+
+        .overlay {
+          opacity: 1;
+        }
+        
+      }
+
+    }
+
   }
 
 }
