--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -3,13 +3,12 @@
   = react_component('HeroCarousel', skin: 'skin-light', 
     assets: [{link: build_taxon_path('Formal'), src: '/assets/home-page-tiles/hero-1', alt: 'Why so formal? - Shop all formal dresses'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
 
-section.carousel-strap
+section.carousel-strap.instagram
   .container
     .outer-wrap
       h2.title
-        .inner-wrap LATEST TRENDS
-      = react_component('LatestTrendsCarousel')
-      a.btn.btn-block.btn-black.btn-md View more dresses
+        .inner-wrap SHOP INSTAGRAM
+      = react_component('InstagramCarousel', skin: '', assets: [{link: make_a_statement_collection_path, src: '/assets/homepage/lookbook/1.jpg', title: 'BAMBI X FAME'}, {link: photo_finish_collection_path, src: '/assets/homepage/lookbook/2.jpg', title: 'PHOTO FINISH'}, {link: luxe_collection_path, src: '/assets/homepage/lookbook/3.jpg', title: 'THE LUXE COLLECTION'}, {link: make_a_statement_collection_path, src: '/assets/homepage/lookbook/1.jpg', title: 'BAMBI X FAME'}, {link: photo_finish_collection_path, src: '/assets/homepage/lookbook/2.jpg', title: 'PHOTO FINISH'}, {link: luxe_collection_path, src: '/assets/homepage/lookbook/3.jpg', title: 'THE LUXE COLLECTION'}])
 
 /! Content Section
 section.container.content-block.home-main-content
