--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -1,4 +1,14 @@
 .products-collections {
+
+	.mystyle-second-row{
+		.right-col{
+			.category--item{
+				padding-top: 0;
+				padding-bottom: 0;
+			}
+		}
+
+	}
 	padding-top: 40px;
 
 
@@ -440,7 +450,7 @@
 				background: $c-neutral-6;
 			}
 
-			h1, 
+			h1,
 			p {
 				color: $c-neutral-white;
 			}
@@ -529,4 +539,41 @@ li.select2-results__option {
 
 .category-header, .category-header:after {
 	background-color: #eeddf0;
+}
+
+.mystyle-bespoke-dresses{
+	margin-top: 20px;
+	margin-bottom: 20px;
+    font-family: Forum;
+    font-weight: 500;
+    font-size: 4rem;
+}
+.mystyle-numline{
+	background-color: #f5f5f5;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	.num{
+		margin-right: 4%;
+		font-weight: 500;
+	}
+	img{
+		margin-right: 1rem;
+		@media(max-width:992px){
+	    	width:3rem;
+	    }
+	}
+	.mid-text{
+		margin-right: 4%;
+	    border-top: 1px black solid;
+	    border-bottom: 1px black solid;
+	    font-weight: 600;
+	    padding-top: 1rem;
+	    padding-bottom: 1rem;
+	    padding-left: 1rem;
+	    padding-right: 1rem;
+	    font-size: 1.5rem;
+	    @media(max-width:992px){
+	    	font-size:1rem;
+	    }
+	}
 }
