Add Factory Fault flag to returned item
Factory fault added to returned_items and the ability to change the flag from false to true and reversed.

--- a/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/show.html.slim
@@ -36,6 +36,8 @@
   .ibox-content
     h3 Order
     = link_to @item_return.order_number, spree.admin_order_path(id: @item_return.order_number)
+    H3 Factory Fault?
+    = @item_return.factory_fault ? 'Yes' : 'No'
     = render :partial => 'payment_info'
     - if @item_return.return_request.present?
       = render :partial => 'order_return_request'
