updated mobile view of instagram carousel, added image and copy, updated hero carousel

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -54,6 +54,7 @@
 @import 'redesign/vendor/slick-carousel';
 
 // Base
+@import 'redesign/base/type';
 @import 'redesign/base/buttons';
 @import 'redesign/base/containers';
 
