fix height after wd load

--- a/app/views/products/collections/_products_without_content_mystyle.html.slim
+++ b/app/views/products/collections/_products_without_content_mystyle.html.slim
@@ -15,4 +15,5 @@
     = render partial: '/products/collections/product', collection: products, as: :product
 
 coffee:
-  $('.mystyle-first-row .camp1').css('height',$('.img-responsive:first').height())
+  $(window).load ->
+    $('.mystyle-first-row .camp1').css('height',$('.img-responsive:first').height())
