--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -53,6 +53,8 @@
             font-weight: 500;
             font-size: 0.7em;
             margin: 0;
+            width: 98%;
+            border-radius: 2px;
           }
           .input-group-addon{
             border: none !important;
